--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <title>Keeper App</title>
-    <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800' 
-rel='stylesheet' type='text/css'>
+    <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"/>
     <link rel="stylesheet" href="styles.css" />
   	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" media="all">
 </head>
